Working on WorldEditor, fix Huppermage bug

--- a/Sources/Tools/Giny.WorldEditor/Components/Fights/EffectsRelator.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Fights/EffectsRelator.razor
@@ -59,7 +59,19 @@
                 <div style="height:80vh;overflow-y:scroll">
 
                     <Virtualize Items="@DisplayedSpells">
-                        <MudListItem OnClick="() => DisplaySpell(context)" Text=@(GetSpellName(context)) />
+                         <MudListItem OnClick="() => DisplaySpell(context)" Value="context">
+
+                            <div class="d-flex flex-row gap-3 align-center">
+                                <MudIcon Icon="@Icons.Outlined.Workspaces" />
+                                <div class="d-flex flex-column">
+                                    <MudText Style="font-size:14px;line-height:16px;font-weight:600;">@context.Name</MudText>
+                                    <MudText Typo=Typo.caption Style="line-height:16px">@(string.IsNullOrWhiteSpace(context.Description) ? "" : context.Description)</MudText>
+
+                                </div>
+                            </div>
+
+                        </MudListItem>
+
                     </Virtualize>
                 </div>
 
