--- a/Sources/Tools/Giny.WorldEditor/Components/Home.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Home.razor
@@ -19,7 +19,7 @@
 
 @page "/"
 
-<MudThemeProvider @bind-IsDarkMode="@DarkMode" />
+<MudThemeProvider Theme="AppState.GinyTheme" @bind-IsDarkMode="@DarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
@@ -86,15 +86,25 @@
             </MudDrawerHeader>
             <MudNavMenu>
                 <MudTreeView Style="overflow-y:scroll;padding-bottom:50px" Color=Color.Primary T="string">
-                    <MudTreeViewItem Icon="@Icons.Custom.Uncategorized.ChessBishop" Value="@("Fights")">
+                    <MudTreeViewItem Icon="@Icons.Outlined.Webhook" Value="@("Spells")">
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.SpellExplorer)" Match="NavLinkMatch.All">Spells</MudNavLink>
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.EffectsRelator)" Match="NavLinkMatch.All">Spells by effects</MudNavLink>
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.TriggersRelator)" Match="NavLinkMatch.All">Spells by triggers</MudNavLink>
                     </MudTreeViewItem>
 
-                    <MudTreeViewItem Icon="@Icons.Material.Outlined.Public" Value="@("Roleplay")">
+                    <MudTreeViewItem Icon="@Icons.Outlined.Webhook" Value="@("Monsters")">
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.MonsterSpawns)" Match="NavLinkMatch.All">Spawns</MudNavLink>
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Dungeons)" Match="NavLinkMatch.All">Dungeons</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.MonsterDrops)" Match="NavLinkMatch.All">Drops</MudNavLink>
+                    </MudTreeViewItem>
+
+                    <MudTreeViewItem Icon="@Icons.Outlined.Webhook" Value="@("Items")">
+
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Items)" Match="NavLinkMatch.All">Items</MudNavLink>
+
+                    </MudTreeViewItem>
+
+                    <MudTreeViewItem Icon="@Icons.Outlined.Webhook" Value="@("Npcs")">
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Quests)" Match="NavLinkMatch.All">Quests</MudNavLink>
                         <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Npcs)" Match="NavLinkMatch.All">Npcs</MudNavLink>
                     </MudTreeViewItem>
@@ -174,6 +184,14 @@
             else if (AppState.Page == PageEnum.Quests)
             {
                 <Quests></Quests>
+            }
+            else if (AppState.Page == PageEnum.MonsterSpawns)
+            {
+                <MonsterSpawns></MonsterSpawns>
+            }
+            else if (AppState.Page == PageEnum.MonsterDrops)
+            {
+                <MonsterDrops></MonsterDrops>
             }
 
         </CascadingValue>
