--- a/Sources/Tools/Giny.WorldEditor/Components/Loader.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Loader.razor
@@ -1,6 +1,7 @@
 ﻿@using Giny.Core.IO.Configuration;
 @using Giny.Core.Network;
 @using Giny.IO.D2O;
+@using Giny.World.Records.Jobs;
 @using Giny.World.Records.Quests;
 @using Giny.WorldEditor.Caching;
 @using Giny.Core.IO.Configuration;
@@ -62,13 +63,13 @@
             {
                 <MudTimelineItem Elevation="25" TimelineAlign="@align" Size="Size.Small" Color="Color.Success">
                     <ItemContent>
-                        <MudAlert  Severity="Severity.Success">Loaded</MudAlert>
-                        </ItemContent>
-                        <ItemOpposite>
-                            <MudText Typo="Typo.button" Color="Color.Success">@step.Name</MudText>
-                            <MudText Style="white-space:nowrap" Typo="Typo.body2" Class="mud-text-secondary">Loaded.</MudText>
-                        </ItemOpposite>
-                    </MudTimelineItem>
+                        <MudAlert Severity="Severity.Success">Loaded</MudAlert>
+                    </ItemContent>
+                    <ItemOpposite>
+                        <MudText Typo="Typo.button" Color="Color.Success">@step.Name</MudText>
+                        <MudText Style="white-space:nowrap" Typo="Typo.body2" Class="mud-text-secondary">Loaded.</MudText>
+                    </ItemOpposite>
+                </MudTimelineItem>
 
             }
             else if (step.Error)
@@ -269,13 +270,20 @@
         NpcSpawnRecord.Initialize();
         SpellEffectManager.Instance.Initialize();
         SpellRecord.Initialize();
+        SubareaRecord.Initialize();
         QuestRecord.Initialize();
 
     }
     private static void LoadRoleplayMisc()
     {
+        DatabaseManager.Instance.LoadTable<AreaRecord>();
+        DatabaseManager.Instance.LoadTable<RecipeRecord>();
+        DatabaseManager.Instance.LoadTable<MonsterSpawnRecord>();
+        DatabaseManager.Instance.LoadTable<SubareaRecord>();
         DatabaseManager.Instance.LoadTable<BreedRecord>();
         DatabaseManager.Instance.LoadTable<ItemRecord>();
+        DatabaseManager.Instance.LoadTable<WeaponRecord>();
+        WeaponRecord.Initialize();
         DatabaseManager.Instance.LoadTable<MonsterRecord>();
         DatabaseManager.Instance.LoadTable<DungeonRecord>();
         DatabaseManager.Instance.LoadTable<MapPositionRecord>();
