--- a/Sources/Tools/Giny.WorldEditor/Components/Fights/SpellComponent.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Fights/SpellComponent.razor
@@ -28,6 +28,8 @@
                         }
                     </MudPaper>
                     <MudTextField Label="Name" @bind-Value="SelectedSpell.Name"></MudTextField>
+                    <MudTextField Label="Id" ReadOnly=true @bind-Value="SelectedSpell.Id"></MudTextField>
+
                 </div>
 
                 <MudTextField Label="Description" @bind-Value="SelectedSpell.Description"></MudTextField>
